Added YT Video Link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
       <div class="loading" id="js-loader"><div class="loader"></div></div>
       <video id="video" crossorigin="anonymous" style="display: none">
+        <source src='https://youtu.be/2d9oB0vaQQ4'>
       </video>
     </div>
 </body>
