--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <body>
     <div id="canvas">
       <div class="preloader">
+        <img src="./static/loader/loaderImg.svg" alt="spinner">
         </div>
       <div id="overlay">
         <button id="startButton">Play</button>
