--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 <body>
     <div id="canvas">
       <div id="overlay">
-        <button id="startButton">Play</button>
-      </div>
+        <div class="preloader" id="preloader">
+          <img src="./static/loader/loaderImg.svg" alt="spinner">
+          </div>
       <div class="loading" id="js-loader"><div class="loader"></div></div>
       <video id="video" crossorigin="anonymous" style="display: none">
       </video>
